# UltrafastSecp256k1

./: .clang-format  .editorconfig  .gitignore  ANNOUNCEMENT_DRAFT.md  AUDIT_REPORT.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  PORTING.md  Package.swift  README.md  RELEASE_v3.14.0.md  RISCV_OPTIMIZATIONS.md  SECURITY.md  THREAT_MODEL.md  UltrafastSecp256k1.podspec  build_pgo.ps1  build_pgo.sh  conanfile.py  secp256k1-fast.pc.in  sonar-project.properties  vcpkg.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  integration_help.md  (+1 more)
android/: CMakeLists.txt
audit/: AUDIT_TEST_PLAN.md  CMakeLists.txt  audit_ct.cpp  audit_field.cpp  audit_fuzz.cpp  audit_integration.cpp  audit_perf.cpp  audit_point.cpp  audit_scalar.cpp  audit_security.cpp  bench_field_ops.cpp  differential_test.cpp  run_full_audit.ps1  run_full_audit.sh  test_abi_gate.cpp  test_carry_propagation.cpp  test_cross_platform_kat.cpp  test_ct_sidechannel.cpp  test_debug_invariants.cpp  test_fault_injection.cpp  test_fiat_crypto_vectors.cpp  test_frost_kat.cpp  test_fuzz_address_bip32_ffi.cpp  test_fuzz_parsers.cpp  test_musig2_frost.cpp  test_musig2_frost_advanced.cpp  unified_audit_runner.cpp
benchmarks/: README.md
bindings/java/: CMakeLists.txt  CMakeLists.ufsecp.txt
bindings/java/jni/: secp256k1_jni.c  ufsecp_jni.c
bindings/java/src/com/ultrafast/ufsecp/: Ufsecp.java  UfsecpException.java
bindings/java/src/main/java/com/ultrafast/secp256k1/: Secp256k1.java
bindings/python/: pyproject.toml  pyproject.ufsecp.toml
bindings/python/tests/: smoke_test.py
bindings/python/ufsecp/: __init__.py
bindings/python/ultrafast_secp256k1/: __init__.py  _ffi.py
bindings/rust/ufsecp/: Cargo.toml
bindings/rust/ufsecp/src/: lib.rs
cmake/: toolchain-aarch64-linux-gnu.cmake  version.hpp.in
cpu/: CMakeLists.txt  bench_vs_libsecp.cpp  bench_vs_libsecp_full.cpp
cuda/: CMakeLists.txt  README.md
cuda/app/: search_simple.cuh
cuda/include/: batch_inversion.cuh  bloom.cuh  ecdsa.cuh  gpu_compat.h  gpu_occupancy.cuh  hash160.cuh  host_helpers.cuh  ptx_math.cuh  recovery.cuh  schnorr.cuh  search.cuh  search_295m.cuh  search_cpu_identical.cuh  search_cpu_replica.cuh  search_simple.cuh  secp256k1.cuh  secp256k1_32.cuh  secp256k1_32_fast.cuh  secp256k1_32_hybrid_final.cuh  secp256k1_32_hybrid_smart.cuh  secp256k1_32_optimized.cuh  secp256k1_32_working.cuh
cuda/src/: bench_cuda.cu  secp256k1.cu  test_suite.cu
docs/: ABI_VERSIONING.md  API_REFERENCE.md  AUDIT_READINESS_REPORT_v1.md  AUDIT_SCOPE.md  AUDIT_TRACEABILITY.md  BENCHMARKS.md  BUG_BOUNTY.md  BUILDING.md  CROSS_PLATFORM_TEST_MATRIX.md  CT_VERIFICATION.md  FAQ.md  INTERNAL_AUDIT.md  INVARIANTS.md  LTS_POLICY.md  PRE_RELEASE_CHECKLIST.md  README.md  THREAD_SAFETY.md
examples/: CMakeLists.txt  README.md
examples/basic_usage/: main.cpp
examples/esp32_test/: .clion-esp-idf.json  .gitignore  CLION_SETUP.md  CMakePresets.json  ESP32_PLUGIN_QUICK_START.md  README.md  build.ps1  build_esp32.ps1  build_esp32s3.bat  capture.py  flash_com7.bat  monitor_serial.ps1  release_com3.ps1  sdkconfig.defaults
examples/esp32_test/arduino/secp256k1_esp32_benchmark/: secp256k1_esp32_benchmark.ino
examples/esp32_test/main/: CMakeLists.txt  main.cpp
examples/stm32_test/: CMakeLists.txt  flash_and_run.py  go_scan.py  main.cpp  monitor_wait.py  reset_scan.py  startup_stm32f103ze.cpp  syscalls.cpp
metal/: CMakeLists.txt  README.md
nuget/: UltrafastSecp256k1.Native.nuspec
opencl/: CMakeLists.txt  README.md
packaging/: README.md
scripts/: build_release.ps1  build_release.sh  cachegrind_ct_analysis.sh  cross_compiler_ct_stress.sh  ctgrind_validate.sh  generate_audit_package.ps1  generate_audit_package.sh  generate_coverage.sh  generate_dudect_badge.sh  generate_self_audit_report.sh  generate_selftest_report.sh  generate_traceability.sh  perf_regression_check.sh  valgrind_ct_check.sh  verify_ct_disasm.sh  verify_reproducible_build.sh
tests/: audit_ct.cpp  audit_field.cpp  audit_fuzz.cpp  audit_integration.cpp  audit_perf.cpp  audit_point.cpp  audit_results.txt  audit_scalar.cpp  audit_security.cpp  bench_ct_vs_libsecp.cpp  bench_field_ops.cpp  differential_test.cpp  test_ct_sidechannel.cpp  test_frost_kat.cpp  test_vectors.hpp
tools/: repro.ps1  repro.sh
wasm/: CMakeLists.txt  README.md  bench_wasm.mjs  package.json  secp256k1_wasm.cpp  secp256k1_wasm.h
(+279 files in other folders)
